--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
+	<!-- Esta tag head serve apenas como repositorios de instruções, links, etc. "Seu conteúdo não é redenrizado na tela" -->
 	<head>
 		<meta charset="utf-8">
 		<title>Mirror Fashion</title>
-		<link rel="stylesheet" href="/Users/brunosilva/Downloads/Faculdade-Ciesa/curso-web/mirrorfashion/css/reset.css">
-		<link rel="stylesheet" href="/Users/brunosilva/Downloads/Faculdade-Ciesa/curso-web/mirrorfashion/css/estilos.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 	<body>
 		<header class="container">
-			<h1><img src="/Users/brunosilva/Downloads/Faculdade-Ciesa/curso-web/mirrorfashion/img/logo.png" alt="Logo da Mirror Fashion"></h1>
+			<!-- Conteúdo do cabeçalho -->
+			<h1><img src="img/logo.png" alt="Logo da Mirror Fashion"></h1>
 			<p class="sacola">Nenhum item na sacola de compras</p>
 			<nav class="menu-opcoes">
 				<ul>
@@ -20,5 +22,17 @@
 				</ul>
 			</nav>
 		</header>
+		
+		<div id="main">
+			<!-- Conteúdo principal -->
+		</div>
+		
+		<div id="destaques">
+			<!-- Painéis com destaques -->
+		</div>
+		
+		<footer>
+			<!-- Conteúdo do rodapé -->
+		</footer>
 	</body>
 </html>
