--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
+
 	<body>
 		<header class="container">
 			<!-- Conteúdo do cabeçalho -->
-			<h1><img src="img/logo.png" alt="Logo da Mirror Fashion"></h1>
+			<h1>
+				<img src="img/logo.png" alt="Logo da Mirror Fashion">
+			</h1>
 			<p class="sacola">Nenhum item na sacola de compras</p>
 			<nav class="menu-opcoes">
 				<ul>
